# rullo

./: .gitignore  CMakeLists.txt
include/rullo/: Engine.h  Fact.h  Rule.h
src/: Engine.cpp
src/rullo/: Engine.cpp  Fact.cpp  Rule.cpp
test/src/: Basic.cpp  Utils.h  main.cpp
test/xml/basic/: SimpleFacts.xml  SimpleRule.xml
